--- a/app/src/main/res/layout/view_loading.xml
+++ b/app/src/main/res/layout/view_loading.xml
@@ -18,9 +18,9 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/txt_loading_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/status_loading"
             android:textSize="@dimen/txt_display_size" />
 
         <com.elyeproj.loaderviewlibrary.LoaderTextView
